Add surname and favourite color

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="col-12">
-            <h2>Favorite Colour:<span id="colour"></span></h2>
+            <h2>Favorite Colour:<span id="color"></span></h2>
         </div>
     </div>    
 
