--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
         </div>
 
         <div class="col-12">
-            <h2>Name:<span id="u-name"></span></h2>
+            <h3>Name:<span id="u-name"></span></h3>
         </div>
             
 
         <div class="col-12">
-            <h2>Surname:<span id="u-surname"></span></h2>
+            <h3>Surname:<span id="u-surname"></span></h3>
         </div>
 
         <div class="col-12">
-            <h2>Favorite Colour:<span id="color"></span></h2>
+            <h3>Favorite Colour:<span id="color"></span></h3>
+        </div>
+
+        <div class="col-12 text-center">
+            <h2><strong>PASSWORD</strong> <span id="password"></span></h2>
         </div>
     </div>    
 
