--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
         </div>
 
         <div class="col-12 text-center">
-            <h2><strong>PASSWORD</strong> <span id="password"></span></h2>
+            <div class="content d-block">
+                <h2><strong>PASSWORD</strong></h2> 
+              <h3><span id="password"></span><span>23</span></h3>  
+            </div>
         </div>
     </div>    
+
 
 
 
